--- a/views/adminlogin.hbs
+++ b/views/adminlogin.hbs
@@ -54,7 +54,7 @@
                 <i class="fas fa-lock"></i>
                 <input type="password" placeholder="Enter your password" required name="passward" autocomplete="current-password">
               </div>
-              <div class="text"><a href="#">Forgot password?</a></div>
+              <div class="text"><a href="#">Forgot password? you can update</a></div>
               {{#if message}}
               <h4>{{message}}</h4>
               {{/if}}
